--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <section id="game-board">
-        <div class="timer-wrapper text-center py-3">Time: <span class="timer">0</span> s</div>
+        <div class="timer-wrapper text-center py-3">Time: <span class="timer"></span> s</div>
         <div class="message-wrapper"></div>
         <table class="game-table mx-auto">
             <tr>
@@ -162,7 +162,7 @@
                 <td id="99" data-target="J9"></td>
             </tr>
         </table>
-        <button class="btn btn-success d-block mx-auto my-3">START GAME</button>
+        <button class="btn-start btn btn-success d-block mx-auto my-3">START GAME</button>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
