add view object

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section id="game-board">
         <div class="timer-wrapper text-center py-3">Time: <span class="timer"></span> s</div>
-        <div class="message-wrapper"></div>
+        <div class="message-wrapper text-center"></div>
         <table class="game-table mx-auto">
             <tr>
                 <th></td>
