--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <section id="game-board">
-        <div class="timer-wrapper text-center py-3">Time: <span class="timer"></span> s</div>
+        <div class="timer-wrapper text-center pt-3">Time: <span class="timer"></span> s</div>
         <div class="message-wrapper text-center"></div>
         <table class="game-table mx-auto">
             <tr>
@@ -166,7 +166,7 @@
     </section>
 
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
-    <script src="js/out.js"></script>
+    <script src="dist/out.js"></script>
 </body>
 
 </html>
